--- a/package.json
+++ b/package.json
@@ -10,33 +10,14 @@
   },
   "dependencies": {
     "@iconify/react": "5.2.1",
-    "@react-three/drei": "^10.0.5",
-    "@react-three/fiber": "^9.1.0",
-    "@tabler/icons-react": "^3.31.0",
-    "@tiptap/extension-image": "^2.11.7",
-    "@tiptap/extension-task-item": "^2.11.7",
-    "@tiptap/extension-task-list": "^2.11.7",
-    "@tiptap/extension-text-align": "^2.11.7",
-    "@tiptap/extension-typography": "^2.11.7",
-    "@tiptap/react": "^2.11.7",
-    "@tiptap/starter-kit": "^2.11.7",
-    "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "cobe": "0.6.3",
     "framer-motion": "^12.8.0",
     "next": "15.3.0",
-    "pdf-lib": "^1.17.1",
-    "playwright": "^1.40.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^7.0.0",
-    "remark-breaks": "^4.0.0",
-    "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.2.0",
-    "three": "^0.174.0"
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@babel/generator": "^7.28.3",
@@ -48,8 +29,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "glob": "^11.0.3",
